2008-01-15  Johan Dahlin  <johan@gnome.org>

	* flumotion/component/producers/soundcard/soundcard_wizard.py
	(SoundcardStep.setup): Make sure that it works using kiwi 1.9.14

2008-01-15  Thomas Vander Stichele  <thomas at apestaart dot org>

	* autogen.sh:
	  Fail if there is no intltoolize (I have no idea why it wasn't
	  made to fail in the first place)

2008-01-15  Thomas Vander Stichele  <thomas at apestaart dot org>

	* common/Makefile.am:
	* common/intltool.m4:
	  Add macro for people who don't have intltool installed.

2008-01-11  Johan Dahlin  <johan@gnome.org>

	* common/gendoc.py: Import from posixbase, to avoid a deprecation
	message when running the testsuite.

2008-01-11  Johan Dahlin  <johan@gnome.org>

	* flumotion/wizard/basesteps.py:
	* flumotion/wizard/conversionsteps.py:
	* flumotion/wizard/save.py:
	Get remove of a few (double) translations, left-overs from
	previous commit.

2008-01-11  Johan Dahlin  <johan@gnome.org>

	* flumotion/component/producers/firewire/firewire_wizard.py:
	* flumotion/ui/wizard.py:
	* flumotion/wizard/consumptionsteps.py:
	* flumotion/wizard/save.py:
	Get rid of stupid _() to get_step() & friends.

2008-01-11  Johan Dahlin  <johan@gnome.org>

	* flumotion/wizard/enums.py (EncodingVideo): Remove two
	unused enums

	* common/common.mk (locale-uninstalled): Workaround intltool bug 
	and inline the whole target to copy the .gmo files.

2008-01-11  Johan Dahlin  <johan@gnome.org>

	* common/common.mk (locale-uninstalled): Set itlocaledir too, intltool
	uses this rule to install .mo files instead of datadir which normal
	gettext uses

2008-01-10  Johan Dahlin  <johan@gnome.org>

	* flumotion/test/test_registry.py (TestComponentEntry.setUp): 
	Update the tests

	* configure.ac:
	* Makefile.am:
	* autogen.sh:
	* flumotion/admin/admin.py:
	* flumotion/common/registry.py:
	* flumotion/wizard/productionsteps.py:
	* flumotion/component/producers/bttv/bttv.xml:
	* flumotion/component/producers/soundcard/soundcard.xml: